# pathfinding.cloud

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  Introducing pathfinding.cloud.md  LICENSE  LICENSE-3rdparty.csv  NOTICE  PROJECT_SETUP_SUMMARY.md  README.md  README2.md  SCHEMA.md  SCHEMA_UPDATE_NOTES.md  SECURITY.md  azure_future_plans.md  blog-post-draft.md  dev-server.py  index.html  metadata.json  paths.json  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: add-attack-visualization.md  attribution.md  builder.md  builder.md.archived  detection-tools.md  learning-environments.md
.claude/commands/workflows/: builder.md  orchestrator.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml
.github/workflows/: deploy.yml  ruff.yaml  validate.yml  yaml-validation.yaml
css/: style.css
data/: example-001.yaml
data/paths/apprunner/: apprunner-001.yaml  apprunner-002.yaml
data/paths/bedrock/: bedrock-001.yaml  bedrock-002.yaml
data/paths/cloudformation/: cloudformation-001.yaml  cloudformation-002.yaml  cloudformation-003.yaml  cloudformation-004.yaml  cloudformation-005.yaml
data/paths/codebuild/: codebuild-001.yaml  (+3 more)
docs/: CNAME  dev-server.py  index.html  metadata.json  paths.json  site.webmanifest
docs/css/: style.css
docs/js/: app.js
docs/paths/: index.html
js/: app.js
paths/: index.html
schemas/: path-schema.json
scripts/: generate-json.py  validate-schema.py  validate_yaml.py
website/: dev-server.py  index.html  paths.json
website/js/: app.js
(+54 files in other folders)
