[project]
name = "python-template-forge"
version = "0.8.1"
description = "Simple Python project template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.31.0",
  "jsonschema",
]

[dependency-groups]
dev = [
  "pytest-cov",
  "pytest==8.4.2",
  "pre-commit==4.5.1",
]
lint = [
  "ruff"
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-s -v --cov=src --cov-report=term-missing --cov-fail-under=75"
norecursedirs = [".git", "__pycache__", ".venv"]
testpaths = ["tests"]

[tool.ruff]
# https://docs.astral.sh/ruff/settings/
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["N", "E4", "E7", "E9", "F"]
ignore = []
task-tags = ["TODO", "FIXME", "HACK"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
